refactoring helper methods